crates/pyenum-derive/tests/ui/fail/intenum_str_value.rs
use pyenum::PyEnum;

#[derive(Clone, Copy, PyEnum)]
#[pyenum(base = "IntEnum")]
pub enum Bad {
    #[pyenum(value = "ok")]
    Ok,
    #[pyenum(value = "no")]
    No,
}

fn main() {}
