crates/pyenum-derive/tests/ui/fail/intenum_str_value.stderr
error: variant `Ok` has a string `#[pyenum(value = ...)]` but the enum base is `IntEnum`, which requires integer values
 --> tests/ui/fail/intenum_str_value.rs:7:5
  |
7 |     Ok,
  |     ^^
